--- a/CDLite/CDLite.csproj
+++ b/CDLite/CDLite.csproj
@@ -93,6 +93,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="IClosable.cs" />
+    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="RelayCommand.cs" />
     <Page Include="CdView.xaml">
       <Generator>MSBuild:Compile</Generator>
