Made everything a bit smaller, made the window topmost and added a minimize button.

--- a/CDLite/CDLite.csproj
+++ b/CDLite/CDLite.csproj
@@ -92,7 +92,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="IClosable.cs" />
+    <Compile Include="IWindow.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="RelayCommand.cs" />
     <Page Include="CdView.xaml">
